--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
-    android:id="@+id/test_text"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_centerInParent="true"
-    android:gravity="center"
-    android:text="Hello World!"
-    tools:ignore="UnusedResources"
+<ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+>
+    <LinearLayout
+            android:id="@+id/base_linear_layout"
+            android:gravity="center"
+            tools:ignore="UnusedResources"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:divider="@android:drawable/divider_horizontal_textfield"
+            android:showDividers="beginning|middle|end"
     >
-
-</TextView>
+        <TextView
+                android:drawableTop="@mipmap/ic_launcher"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+        />
+    </LinearLayout>
+</ScrollView>
