--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -1,3 +1,219 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android">
+<navigation xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            app:startDestination="@id/startup"
+        >
+    <fragment
+            android:id="@+id/startup"
+            android:name="com.contentful.tea.kotlin.home.StartupFragment"
+            android:label="fragment_startup"
+            tools:layout="@layout/fragment_startup"
+            >
+        <action
+                android:id="@+id/startupDone"
+                app:destination="@id/home"
+                />
+    </fragment>
+    <fragment
+            android:id="@+id/home"
+            android:name="com.contentful.tea.kotlin.home.HomeFragment"
+            android:label="fragment_home"
+            tools:layout="@layout/fragment_home"
+            >
+        <action
+                android:id="@+id/openCategory"
+                app:destination="@id/courses"
+                >
+            <argument
+                    android:name="categoryId"
+                    app:type="string"
+                    />
+        </action>
+        <action
+                android:id="@+id/openCourseOverview"
+                app:destination="@id/course_overview"
+                >
+            <argument
+                    android:name="courseId"
+                    app:type="string"
+                    />
+        </action>
+        <action
+                android:id="@+id/openSettings"
+                app:destination="@id/settings"
+                />
+        <deepLink
+                app:uri="/"
+                android:autoVerify="true"
+                />
+    </fragment>
+    <fragment
+            android:id="@+id/courses"
+            android:name="com.contentful.tea.kotlin.courses.CoursesFragment"
+            android:label="fragment_courses"
+            tools:layout="@layout/fragment_courses"
+            >
+        <argument
+                android:name="categoryId"
+                app:type="string"
+                android:defaultValue="all"
+                />
+        <action
+                android:id="@+id/openCourseOverview"
+                app:destination="@id/course_overview"
+                >
+            <argument
+                    android:name="courseId"
+                    app:type="string"
+                    />
+
+        </action>
+        <action
+                android:id="@+id/openCategory"
+                app:destination="@id/courses"
+                app:launchSingleTop="false"
+                >
+            <argument
+                    android:name="categoryId"
+                    app:type="string"
+                    />
+        </action>
+        <action
+                android:id="@+id/openSettings"
+                app:destination="@id/settings"
+                />
+        <deepLink
+                app:uri="/courses"
+                android:autoVerify="true"
+                />
+    </fragment>
+    <fragment
+            android:id="@+id/course_overview"
+            android:name="com.contentful.tea.kotlin.courses.CourseOverviewFragment"
+            android:label="fragment_course_overview"
+            tools:layout="@layout/fragment_course_overview"
+            >
+        <argument
+                android:name="courseId"
+                app:type="string"
+                />
+
+        <action
+                android:id="@+id/openLesson"
+                app:destination="@id/lesson"
+                >
+            <argument
+                    android:name="courseId"
+                    app:type="string"
+                    />
+            <argument
+                    android:name="lessonId"
+                    app:type="string"
+                    />
+        </action>
+        <action
+                android:id="@+id/openSettings"
+                app:destination="@id/settings"
+                />
+
+        <deepLink
+                app:uri="/lessons"
+                android:autoVerify="true"
+                />
+    </fragment>
+    <fragment
+            android:id="@+id/lesson"
+            android:name="com.contentful.tea.kotlin.courses.OneLessonFragment"
+            android:label="fragment_lesson"
+            tools:layout="@layout/fragment_lesson"
+            >
+        <argument
+                android:name="courseId"
+                app:type="string"
+                />
+        <argument
+                android:name="lessonId"
+                app:type="string"
+                />
+
+        <action
+                app:destination="@id/lesson"
+                android:id="@+id/openLesson"
+                >
+
+            <argument
+                    android:name="courseId"
+                    app:type="string"
+                    />
+            <argument
+                    android:name="lessonId"
+                    app:type="string"
+                    />
+        </action>
+        <action
+                android:id="@+id/openSettings"
+                app:destination="@id/settings"
+                />
+
+        <deepLink
+                app:uri="/lesson"
+                android:autoVerify="true"
+                />
+    </fragment>
+    <fragment
+            android:id="@+id/settings"
+            android:name="com.contentful.tea.kotlin.settings.SettingsFragment"
+            android:label="fragment_settings"
+            >
+        <action
+                android:id="@+id/openSpaceSettings"
+                app:destination="@id/spaceSettings"
+                />
+        <action
+                android:id="@+id/openAbout"
+                app:destination="@id/aboutFragment"
+                />
+        <action
+                android:id="@+id/openImprint"
+                app:destination="@id/imprintFragment"
+                />
+        <action
+                android:id="@+id/openScanQR"
+                app:destination="@id/QRCodeScanner"
+                />
+    </fragment>
+    <fragment
+            android:id="@+id/spaceSettings"
+            android:name="com.contentful.tea.kotlin.settings.SpaceSettingsFragment"
+            android:label="fragment_space_settings"
+            >
+        <action
+                android:id="@+id/openScanQR"
+                app:destination="@id/QRCodeScanner"
+                />
+    </fragment>
+    <fragment
+            android:id="@+id/QRCodeScanner"
+            android:name="com.contentful.tea.kotlin.settings.QRCodeScannerFragment"
+            android:label="fragment_qrcode_scanner"
+            tools:layout="@layout/fragment_qrcode_scanner"
+            >
+    </fragment>
+    <fragment
+            android:id="@+id/aboutFragment"
+            android:name="com.contentful.tea.kotlin.information.AboutFragment"
+            android:label="fragment_about"
+            tools:layout="@layout/fragment_about"
+            >
+        <deepLink app:uri="/about"/>
+    </fragment>
+    <fragment
+            android:id="@+id/imprintFragment"
+            android:name="com.contentful.tea.kotlin.information.ImprintFragment"
+            android:label="fragment_imprint"
+            tools:layout="@layout/fragment_imprint"
+            >
+        <deepLink app:uri="/imprint"/>
+    </fragment>
 </navigation>
