--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,16 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".AboutFragment"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".information.AboutFragment"
         >
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:id="@+id/about_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/hello_blank_fragment"
+            android:textStyle="bold"
             />
 
-</FrameLayout>
+    <TextView
+            android:id="@+id/about_description"
+            android:layout_below="@id/about_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/sample_text"
+            />
+
+    <!--TODO Fill out links and other team member stuff-->
+    <ScrollView
+            android:layout_below="@id/about_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
+
+            <TextView
+                    android:id="@+id/about_android"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@null"
+                    android:drawableTop="@mipmap/ic_launcher"
+                    android:gravity="center"
+                    tools:text="Android"
+                    />
+
+            <TextView
+                    android:id="@+id/about_java"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@null"
+                    android:drawableTop="@mipmap/ic_launcher"
+                    android:gravity="center"
+                    tools:text="Java"
+                    />
+
+            <TextView
+                    android:id="@+id/about_php"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@null"
+                    android:drawableTop="@mipmap/ic_launcher"
+                    android:gravity="center"
+                    tools:text="php"
+                    />
+
+            <TextView
+                    android:id="@+id/about_python"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@null"
+                    android:drawableTop="@mipmap/ic_launcher"
+                    android:gravity="center"
+                    tools:text="Python"
+                    />
+
+            <TextView
+                    android:id="@+id/about_csharp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@null"
+                    android:drawableTop="@mipmap/ic_launcher"
+                    android:gravity="center"
+                    tools:text=".net"
+                    />
+
+            <TextView
+                    android:id="@+id/about_coco"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@null"
+                    android:drawableTop="@mipmap/ic_launcher"
+                    android:gravity="center"
+                    tools:text="ios"
+                    />
+
+        </LinearLayout>
+    </ScrollView>
+
+</RelativeLayout>
