--- a/app/src/main/res/layout/fragment_imprint.xml
+++ b/app/src/main/res/layout/fragment_imprint.xml
@@ -1,16 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".ImprintFragment"
-        >
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            tools:context=".information.ImprintFragment"
+            android:orientation="vertical"
+        >
+
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/hello_blank_fragment"
+            android:textStyle="bold"
+            android:layout_column="0"
+            android:layout_row="0"
+            android:layout_columnWeight="1"
             />
 
-</FrameLayout>
+    <TextView
+            android:layout_columnWeight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/hello_blank_fragment"
+            android:layout_column="1"
+            android:layout_row="0"
+            />
+
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/hello_blank_fragment"
+            android:textStyle="bold"
+            android:layout_column="0"
+            android:layout_row="1"
+            android:layout_columnWeight="1"
+            />
+
+    <TextView
+            android:layout_columnWeight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/hello_blank_fragment"
+            android:layout_column="1"
+            android:layout_row="1"
+            />
+
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/hello_blank_fragment"
+            android:textStyle="bold"
+            android:layout_column="0"
+            android:layout_row="2"
+            android:layout_columnWeight="1"
+            />
+
+    <TextView
+            android:layout_columnWeight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/hello_blank_fragment"
+            android:layout_column="1"
+            android:layout_row="2"
+            />
+
+</GridLayout>
