--- a/app/src/main/res/layout/fragment_qrcode_scanner.xml
+++ b/app/src/main/res/layout/fragment_qrcode_scanner.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".QRCodeScanner">
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".settings.QRCodeScannerFragment"
+        android:orientation="vertical"
+        >
 
-    <!-- TODO: Update blank fragment layout -->
+    <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:src="@mipmap/ic_launcher_foreground"
+            android:contentDescription="@null"
+            />
+
     <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+            android:layout_height="0dp"
+            android:layout_weight="0.3"
+            android:text="@string/sample_text"
+            />
 
-</FrameLayout>
+</LinearLayout>
