--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+        >
+    <item
+            android:id="@+id/action_settings"
+            android:icon="@android:drawable/ic_menu_manage"
+            android:title="@string/action_settings"
+            />
 </menu>
