--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,3 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string-array name="api_keys_readable">
+        <item>Delivery Api</item>
+        <item>Preview Api</item>
+    </string-array>
+    <string-array name="api_keys_stored">
+        <item>CDA</item>
+        <item>CPA</item>
+    </string-array>
+    <string-array name="locales_readable">
+        <item>English</item>
+        <item>German</item>
+    </string-array>
+    <string-array name="locales_stored">
+        <item>en-US</item>
+        <item>de-DE</item>
+    </string-array>
 </resources>
