--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,27 @@
         android:orientation="vertical"
         >
 
+    <androidx.appcompat.widget.Toolbar
+            android:id="@+id/main_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:elevation="@dimen/bar_elevation"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            >
+
+        <ImageView
+                android:id="@+id/logo_image"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/main_app_bar_logo_height"
+                android:scaleType="fitStart"
+                android:src="@drawable/ic_app_logo"
+                android:contentDescription="@string/startup_description_app_logo"
+                />
+
+    </androidx.appcompat.widget.Toolbar>
+
     <fragment
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -17,17 +38,18 @@
             android:name="androidx.navigation.fragment.NavHostFragment"
             app:navGraph="@navigation/navigation_main"
             app:defaultNavHost="true"
-            tools:layout="@layout/fragment_startup"
+            tools:layout="@layout/fragment_home"
             />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_navigation"
+            android:id="@+id/main_bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:background="@color/colorPrimary"
-            app:itemIconTint="@android:color/white"
-            app:itemTextColor="@android:color/white"
+            app:elevation="@dimen/bar_elevation"
+            app:itemIconTint="#FF536171"
+            app:itemTextColor="#FF536171"
             app:menu="@menu/menu_bottom_navigation"
+            android:background="@android:color/white"
             />
 </LinearLayout>
