--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008577</color>
+    <!--suppress UnusedResources -->
     <color name="colorPrimaryDark">#00574B</color>
+    <!--suppress UnusedResources -->
     <color name="colorAccent">#D81B60</color>
 </resources>
