--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,9 @@
 <resources>
     <dimen name="high_border">16dp</dimen>
     <dimen name="mid_border">8dp</dimen>
-    <dimen name="card_elevation">4dp</dimen>
+    <dimen name="card_elevation">2dp</dimen>
     <dimen name="card_content_padding">8dp</dimen>
     <dimen name="card_corner_radius">2dp</dimen>
+    <dimen name="bar_elevation">8dp</dimen>
+    <dimen name="main_app_bar_logo_height">30dp</dimen>
 </resources>
