--- a/app/src/main/res/layout/course_card.xml
+++ b/app/src/main/res/layout/course_card.xml
@@ -13,6 +13,7 @@
         >
 
     <ImageView
+            android:id="@+id/card_background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
@@ -21,6 +22,7 @@
             />
 
     <RelativeLayout
+            android:id="@+id/card_scrim"
             android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
