add course overview activity

--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -9,6 +9,6 @@
     <item
             android:id="@+id/bottom_navigation_courses"
             android:title="@string/app_bar_courses"
-            android:icon="@drawable/ic_action_courses"
+            android:icon="@drawable/ic_lesson"
             />
 </menu>
