--- a/app/src/main/res/layout/fragment_course_overview.xml
+++ b/app/src/main/res/layout/fragment_course_overview.xml
@@ -4,13 +4,15 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        tools:context=".courses.CourseOverviewFragment"
+        android:orientation="vertical"
         >
 
     <LinearLayout
+            android:id="@+id/overview_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:context=".courses.CourseOverviewFragment"
-            android:id="@+id/overview_container"
             android:orientation="vertical"
             >
 
@@ -18,23 +20,38 @@
                 android:id="@+id/overview_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/app_name"
+                android:paddingTop="@dimen/high_border"
+                android:paddingStart="@dimen/high_border"
+                android:paddingEnd="@dimen/high_border"
+                android:paddingBottom="0dp"
                 android:textStyle="bold"
+                android:textSize="24sp"
+                tools:text="@string/app_name"
+                android:textColor="#FF536171"
                 />
 
         <TextView
+                android:textSize="12sp"
+                android:textColor="#FF536171"
                 android:id="@+id/overview_duration"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/app_name"
-                android:textStyle="italic"
+                tools:text="Duration: 23 min • Skill level: beginner"
+                android:paddingTop="0dp"
+                android:paddingStart="@dimen/high_border"
+                android:paddingEnd="@dimen/high_border"
+                android:paddingBottom="@dimen/high_border"
                 />
 
         <TextView
                 android:id="@+id/overview_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/sample_text"
+                android:paddingTop="0dp"
+                android:paddingBottom="0dp"
+                android:paddingStart="@dimen/high_border"
+                android:paddingEnd="@dimen/high_border"
+                tools:text="@string/sample_text"
                 />
 
         <FrameLayout
@@ -53,21 +70,26 @@
                     android:id="@+id/overview_next"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/mid_border"
+                    android:padding="@dimen/high_border"
                     android:layout_gravity="end"
-                    android:layout_margin="@dimen/mid_border"
-                    android:src="@mipmap/ic_launcher"
+                    android:layout_margin="@dimen/high_border"
+                    android:src="@drawable/ic_lesson_next"
+                    android:backgroundTint="@color/colorPrimary"
+                    android:tint="@android:color/white"
+                    />
+
+            <TextView
+                    android:paddingStart="@dimen/high_border"
+                    android:paddingEnd="@dimen/high_border"
+                    android:id="@+id/overview_lessons_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/lessons"
+                    android:textColor="@color/colorPrimary"
+                    android:layout_gravity="bottom"
+                    android:textSize="14sp"
+                    android:textAllCaps="true"
                     />
         </FrameLayout>
-
-        <!-- TODO: REMOVE FOLLOWING LINES WITH DYNAMIC CONTENT! -->
-
-        <TextView
-                android:id="@+id/overview_lessons_label"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/lessons"
-                android:textColor="@color/colorPrimary"
-                />
     </LinearLayout>
 </ScrollView>
