--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#FF4A90E2</color>
     <!--suppress UnusedResources -->
     <color name="colorPrimaryDark">#00574B</color>
     <!--suppress UnusedResources -->
