--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="bar_elevation">8dp</dimen>
     <dimen name="main_app_bar_logo_height">30dp</dimen>
     <dimen name="card_content_padding_horizontal">16dp</dimen>
+    <dimen name="lesson_item_title_font_size">24sp</dimen>
     <dimen name="card_title_font_size">24sp</dimen>
     <dimen name="card_description_font_size">13sp</dimen>
     <dimen name="course_card_max_height">125dp</dimen>
