--- a/app/src/main/res/layout/fragment_lesson.xml
+++ b/app/src/main/res/layout/fragment_lesson.xml
@@ -12,31 +12,28 @@
             >
 
         <LinearLayout
+                android:id="@+id/lesson_module_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:context=".courses.OneLessonFragment"
                 android:orientation="vertical"
                 tools:ignore="UseCompoundDrawables"
+                android:padding="@dimen/high_border"
                 >
 
-            <!--TODO: Replace with dynamic content-->
             <TextView
+                    android:id="@+id/lesson_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/sample_text"
-                    android:drawableBottom="@mipmap/ic_launcher"
+                    tools:text="API-first"
+                    android:textColor="#FF536171"
+                    android:textSize="24sp"
                     />
 
-            <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:contentDescription="@null"
-                    />
-
+            <!-- Space for lesson modules -->
         </LinearLayout>
     </ScrollView>
 
-    <!--TODO: Exchange icon-->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/lesson_next_button"
             android:layout_width="wrap_content"
@@ -44,6 +41,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_margin="@dimen/high_border"
-            android:src="@mipmap/ic_launcher_foreground"
+            android:backgroundTint="@color/colorPrimary"
+            android:src="@drawable/ic_lesson_next"
             />
 </RelativeLayout>
