--- a/app/src/main/res/layout/fragment_course_overview.xml
+++ b/app/src/main/res/layout/fragment_course_overview.xml
@@ -27,12 +27,12 @@
                 android:textStyle="bold"
                 android:textSize="24sp"
                 tools:text="@string/app_name"
-                android:textColor="#FF536171"
+                android:textColor="@color/colorPrimaryDark"
                 />
 
         <TextView
                 android:textSize="12sp"
-                android:textColor="#FF536171"
+                android:textColor="@color/colorPrimaryDark"
                 android:id="@+id/overview_duration"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
