--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,8 +24,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             app:elevation="@dimen/bar_elevation"
-            app:itemIconTint="#FF536171"
-            app:itemTextColor="#FF536171"
+            app:itemIconTint="@color/colorPrimaryDark"
+            app:itemTextColor="@color/colorPrimaryDark"
             app:menu="@menu/menu_bottom_navigation"
             android:background="@android:color/white"
             />
