--- a/app/src/main/res/layout/fragment_lesson.xml
+++ b/app/src/main/res/layout/fragment_lesson.xml
@@ -26,7 +26,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     tools:text="API-first"
-                    android:textColor="#FF536171"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="24sp"
                     />
 
