--- a/app/src/main/res/drawable/ic_background_circle.xml
+++ b/app/src/main/res/drawable/ic_background_circle.xml
@@ -3,6 +3,6 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle"
         >
-    <solid android:color="#FFE5EBED"/>
+    <solid android:color="@color/dimmed_background"/>
     <corners android:radius="40dp"/>
 </shape>
