--- a/app/src/main/res/layout/lesson_module_image.xml
+++ b/app/src/main/res/layout/lesson_module_image.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              tools:ignore="UseCompoundDrawables"
+<RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:ignore="UseCompoundDrawables"
+        android:paddingBottom="@dimen/mid_border"
         >
 
     <ImageView
@@ -16,6 +18,7 @@
             />
 
     <TextView
+            android:layout_below="@id/module_image_image"
             android:id="@+id/module_image_caption"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -26,4 +29,4 @@
             android:textSize="14sp"
             />
 
-</LinearLayout>
+</RelativeLayout>
