--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF4A90E2</color>
+    <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#FF536171</color>
-    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorAccent">#FF4A90E2</color>
     <color name="defaultScrim">#E6536171</color>
+    <color name="dimmed_background">#FFE5EBED</color>
+    <color name="horizontal_rule_color">#80808080</color>
 </resources>
